[gd_scene load_steps=7 format=3 uid="uid://cl7yicich6rhc"]

[ext_resource type="Script" uid="uid://x2v6oqsje4d7" path="res://UI/Player/renderer/render_canvas.gd" id="1_8ji3a"]
[ext_resource type="PackedScene" uid="uid://bk6kchpbd5gk3" path="res://UI/Player/player.tscn" id="2_th6co"]
[ext_resource type="Script" uid="uid://d4lj27l7v5era" path="res://UI/Player/renderer/color_shader.gd" id="4_dfqqv"]

[sub_resource type="BoxMesh" id="BoxMesh_28txx"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_80el8"]
transparency = 1
shading_mode = 0
albedo_color = Color(0.427451, 1, 0.247059, 0.482353)

[sub_resource type="Environment" id="Environment_ilbuc"]
background_mode = 1
background_color = Color(0, 0.960784, 0.819608, 1)
ambient_light_source = 1
ambient_light_color = Color(1, 1, 1, 1)
reflected_light_source = 1

[node name="RenderCanvas" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_8ji3a")

[node name="MainViewportContainer" type="SubViewportContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 512.0
offset_bottom = 512.0

[node name="MainViewport" type="SubViewport" parent="MainViewportContainer"]
unique_name_in_owner = true
own_world_3d = true
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="Player" parent="MainViewportContainer/MainViewport" instance=ExtResource("2_th6co")]
transform = Transform3D(-2.18557e-08, 0, 0.5, 0, 0.5, 0, -0.5, 0, -2.18557e-08, 0, 0, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="MainViewportContainer/MainViewport"]
transform = Transform3D(0.5, -0.75, 0.433013, 0, 0.5, 0.866025, -0.866025, -0.433013, 0.25, 0, 0, 0.857771)

[node name="Camera3D" type="Camera3D" parent="MainViewportContainer/MainViewport"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.687425, 2)
projection = 1
size = 2.0
near = 0.01

[node name="DebugMesh" type="MeshInstance3D" parent="MainViewportContainer/MainViewport"]
unique_name_in_owner = true
visible = false
mesh = SubResource("BoxMesh_28txx")
surface_material_override/0 = SubResource("StandardMaterial3D_80el8")

[node name="WorldEnvironment" type="WorldEnvironment" parent="MainViewportContainer"]
environment = SubResource("Environment_ilbuc")

[node name="after_effect" type="SubViewportContainer" parent="."]
layout_mode = 0
offset_right = 512.0
offset_bottom = 512.0

[node name="ShaderViewport" type="SubViewport" parent="after_effect"]
unique_name_in_owner = true
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="ColorShader" type="ColorRect" parent="after_effect/ShaderViewport"]
unique_name_in_owner = true
custom_minimum_size = Vector2(512, 512)
offset_right = 512.0
offset_bottom = 512.0
color = Color(0.286275, 0.333333, 0.0392157, 0)
script = ExtResource("4_dfqqv")

[node name="Camera2D" type="Camera2D" parent="after_effect/ShaderViewport"]
anchor_mode = 0

[node name="palette" type="Sprite2D" parent="."]
position = Vector2(11, 502)

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 1109.0
offset_top = 11.0
offset_right = 1150.0
offset_bottom = 42.0
text = "Test"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="gui_input" from="after_effect/ShaderViewport/ColorShader" to="." method="_on_gui_input"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
